# ticketto-contracts

./: .gitignore  Cargo.toml  README.md
.config/: zepter.yaml
contract-metadata/: ticketto_events.json  ticketto_tickets.json
contracts/events/: Cargo.toml
contracts/events/src/: lib.rs  tests.rs
contracts/tickets/: Cargo.toml
contracts/tickets/src/: lib.rs  tests.rs
libs/traits/: Cargo.toml
libs/traits/src/: lib.rs
libs/types/: Cargo.toml
libs/types/src/: attributes.rs  error.rs  event.rs  lib.rs  ticket.rs
